Rental Module + update swagger doc
