# src/shared/infra/http/routes/rentals.routes.ts
@@ -1,12 +1,27 @@
 import { Router } from 'express';
 
 import { CreateRentalController } from '@modules/rentals/useCases/createRental/CreateRentalController';
+import { DevolutionRentalController } from '@modules/rentals/useCases/devolutionRental/DevolutionRentalController';
+import { ListRentalsByUserController } from '@modules/rentals/useCases/listRentalsByUser/ListRentalsByUserController';
 import { ensureAuthenticated } from '@shared/infra/http/middleware/ensureAuthenticated';
 
 const rentalRoutes = Router();
 
 const createRentalController = new CreateRentalController();
+const devolutionRentalController = new DevolutionRentalController();
+const listRentalsByUserController = new ListRentalsByUserController();
 
 rentalRoutes.post('/', ensureAuthenticated, createRentalController.handle);
+
+rentalRoutes.post(
+  '/devolution/:id',
+  ensureAuthenticated,
+  devolutionRentalController.handle,
+);
+rentalRoutes.get(
+  '/user',
+  ensureAuthenticated,
+  listRentalsByUserController.handle,
+);
 
 export { rentalRoutes };
